nginx/modules/vpc/igw.tf
# creating an IGW 
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.vpc.id

  tags = {
    Name      = "${var.name}-igw"
  }
}
